@@ -1,104 +1,0 @@
-#	Makefile for Apache 2.x GNUstepWeb module
-#   Copyright (C) 1999-2002 Free Software Foundation, Inc.
-#   
-#   Written by:	Manuel Guesdon <mguesdon@orange-concept.com>
-#   Date: 	Jully 1999
-#		Dec 2002
-#   
-#   This file is part of the GNUstep Web Library.
-#   
-#   This library is free software; you can redistribute it and/or
-#   modify it under the terms of the GNU Library General Public
-#   License as published by the Free Software Foundation; either
-#   version 2 of the License, or (at your option) any later version.
-#   
-#   This library is distributed in the hope that it will be useful,
-#   but WITHOUT ANY WARRANTY; without even the implied warranty of
-#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-#   Library General Public License for more details.
-#   
-#   You should have received a copy of the GNU Library General Public
-#   License along with this library; if not, write to the Free
-#   Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-
-#	The result of this is mod_gsweb.so.
-#       Newt, run
-#	       apxs -i -a -n gsweb mod_gsweb.so
-#
-
-#Solaris, Linux, FreeBSD
-
-OSNAME := "$(shell uname)"
-APXS := "$(shell which apxs2)"
-
-ifeq ("no apxs",$(findstring no apxs,$(APXS)))
-APXS := "$(shell which apxs)"
-endif
-
-ifeq ("",$(strip $(APXS)))
-	ifeq ("FreeBSD",$(strip $(OSNAME)))
-		APXS = /usr/local/sbin/apxs
-	else
-		APXS = /usr/apache/sbin/apxs
-	endif
-else
-	ifneq (,$(findstring no apxs,$(APXS)))
-		APXS = "/usr/apache/sbin/apxs"
-	endif
-endif
-
-APACHE_LIBEXECDIR := $(shell $(APXS) -q LIBEXECDIR)
-APACHEHEADERS := -I$(shell $(APXS) -q INCLUDEDIR)
-APACHE_CFLAGS := $(shell $(APXS) -q CFLAGS)
-APACHE_CC := $(shell $(APXS) -q CC)
-
-SRCROOT = ..
-DSTROOT = .
-OBJROOT = .
-
-# Directory
-SERVERAPI = Apache2
-SERVERAPIROOT = Apache
-
-ADAPTOR = $(DSTROOT)/mod_gsweb.so
-
-LOADBALANCING = roundrobin
-COMMON = $(SRCROOT)/common
-
-INCLUDE = -I. -I$(COMMON) $(APACHEHEADERS) -I/usr/X11R6/include
-
-CFLAGS = $(APACHE_CFLAGS) -fpic $(RC_CFLAGS) $(INCLUDE) -D$(SERVERAPI) -DREENTRANT -DEAPI
-
-include $(COMMON)/common.make
-OFILES = $(COMMONOBJS) $(OBJROOT)/mod_gsweb.o
-
-CC = $(APACHE_CC)
-AR = ar
-LD = $(CC)
-RANLIB = ranlib
-
-LDFLAGS = -rdynamic
-LIBS = -ldl -lcrypt -lm -lPropList
-LDSHARED = $(LD) -shared  $(CFLAGS)
-INSTALL = /usr/bin/install -c
-INSTALL_PROGRAM = $(INSTALL)
-
-
-
-$(ADAPTOR): $(OFILES)
-	$(LDSHARED)  -o $(ADAPTOR) $(OFILES) \
-		 $(LIBGSWEBARG) $(LIBS)
-
-$(OBJROOT)/mod_gsweb.o: $(SRCROOT)/$(SERVERAPIROOT)/mod_gsweb.c
-
-all:: $(ADAPTOR)
-
-clean:
-	rm -f $(COMMONOBJS) $(OFILES) $(ADAPTOR) $(ADAPTORLIB) core
-
-
-
-
-
-
-
